--- a/client/src/assets/styles/game.css
+++ b/client/src/assets/styles/game.css
@@ -46,7 +46,7 @@ h2 {
 }
 .card {
   width: 100%;
-  height: 100%;
+  height: 85%;
   transition: transform 1s;
   transform-style: preserve-3d;
   cursor: pointer;
@@ -134,7 +134,7 @@ h2 {
   text-align: center;
   font-size: 1.5em;
 }
-#next-player-button {
+.next-player-button {
   display: block;
   width: 40%;
   background-image: linear-gradient(to right, #f0f0f5, #2ba7da);
@@ -144,7 +144,26 @@ h2 {
   padding: 30px;
   box-shadow: 0px 3px 7px 6px rgba(0, 0, 0, 0.18);
 }
-#next-player-button:hover {
+.next-player-button:hover {
+  background-position: right center;
+  transition: 0.7s;
+}
+.new-game {
+  display: block;
+  width: 35%;
+  margin: 25px auto;
+  padding: 20px;
+}
+.new-game-button {
+  width: 100%;
+  background-image: linear-gradient(to right, #2ba7da, #f0f0f5);
+  border-radius: 20px;
+  background-size: 200%;
+  margin: 0 auto;
+  padding: 30px;
+  box-shadow: 0px 3px 7px 6px rgba(0, 0, 0, 0.18);
+}
+.new-game-button:hover {
   background-position: right center;
   transition: 0.7s;
 }
@@ -178,13 +197,13 @@ footer {
   left: 0;
 }
 .modal {
-  width: 50%;
+  width: 40%;
   background-image: linear-gradient(to right, #f0f0f5 60%, #2ba7da 100%);
-  opacity: 90%;
+  opacity: 100%;
   margin: 0 auto;
   position: absolute;
-  top: 25%;
-  left: 25%;
+  top: 30%;
+  left: 30%;
   border-radius: 25px;
   padding: 10px;
   animation: slideUp 1s;
@@ -274,7 +293,7 @@ footer {
     font-size: 20px;
     padding: 10px;
   }
-  #next-player-button {
+  .next-player-button {
     width: 25%;
     padding: 20px;
     font-size: 12px;
@@ -332,7 +351,7 @@ footer {
     font-size: 20px;
     padding: 10px;
   }
-  #next-player-button {
+  .next-player-button {
     width: 40%;
     padding: 20px;
     font-size: 12px;
